...
    @IBOutlet weak var loginButton: UIButton!
    @IBOutlet weak var userNameTextBox: UITextField!
    @IBOutlet weak var passwordTextBox: UITextField!
    @IBOutlet weak var instanceTextBox: UITextField!
    var currentUser: UserModel = UserModel()
    let badCredentialsMessage = "Your login attempt was not successful. The user credentials you entered were not valid, please try again."
    let missingFieldMessage = "One or more required fields were not entered."
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setTextFieldDelegates()
        
        //Back button for the next screen is set in this screen.
...
